refactor: 크루 주간 상위 멤버 캐싱 로직과 설정을 리팩토링합니다